# bambara-text-normalization

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  dev-requirements.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-check.yml
src/bambara_normalizer/: __init__.py  cli.py  config.py  dates.py  evaluation.py  measurements.py  normalizer.py  numbers.py  times.py  utils.py
tests/: __init__.py  conftest.py  old_test.py  test_contractions.py  test_dates.py  test_disambiguation.py  test_evaluation.py  test_measurements.py  test_normalizer.py  test_numbers.py  test_times.py  test_utilities.py
